# coupled-energy-ts

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  examples.py  generate_data.py  pyproject.toml  requirements.txt  validate.py
.github/workflows/: integration.yml  test.yml
config/: germany_2010.yml  germany_config.py
examples/: 01_germany_2010.ipynb  01_germany_2010.py  02_byo_country.ipynb  02_byo_country.py  README.md
figures/: figure_building_diversity_ts.py  figure_geoma_example.py  figure_germany_map.py
input/: README.md  archetypes.csv
input/grid/: DE_Grid_ETRS89-UTM32_10km.gpkg
output/: README.md
scripts/: preprocess_electricity_htw.py
src/: __init__.py  ach.py  cli.py  config.py  pipeline.py  preprocessing.py  simulation.py  thermal_models.py  validate_output.py  weather.py
src/coupled_ts_paper/: __init__.py  building_rc_calculator.py  coupled_timeseries_generator.py  location_reader.py  objects_csv_generator.py
src/providers/: __init__.py  archetype.py  base.py  electricity.py  occupancy.py  weather.py
tests/: conftest.py  test_providers.py  test_simulate_archetype_regression.py  test_smoke_pipeline.py  test_thermal_models.py
tests/integration/: test_demandlib.py  test_openmeteo.py  test_teaser.py  test_yaml_combinations.py
validation/: README.md  runme.py
validation/germany/: demand_comparison.py
validation/us/: COUNTIES.py  README.md  __init__.py  building_comparison.py  building_simulate.py  buildings_select.py  convert.py  diversity_comparison.py  download_data.py  eulp_to_sim.py  find_capacity_columns.py  find_zone_counties.py  runme.py  timeseries_comparison.py  validation_map.py
